Category-Presentation.html

--- a/Categoty-Presentation.html
+++ b/Categoty-Presentation.html
@@ -297,6 +297,13 @@
                         </tbody>
                     </table>
                 </div>
+                <br><br><br>
+                <!--CHECK OUT BUTTON-->
+                <form id="check-out">
+                    <p>Check Out Here</p>
+                    <input type="submit" value="CHECK OUT" class="payment">
+
+                </form>
     </body>
 
   </html>
